--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,8 @@ description:         Please see the README on GitHub at <https://github.com/s-ze
 
 dependencies:
 - base >= 4.7 && < 5
+- containers
+- recursion-schemes
 
 library:
   source-dirs: src
