--- a/lidointerview.cabal
+++ b/lidointerview.cabal
@@ -26,14 +26,18 @@ source-repository head
 library
   exposed-modules:
       Commands
+      Interp
       Lib
       Parser
+      ParseValue
   other-modules:
       Paths_lidointerview
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , containers
+    , recursion-schemes
   default-language: Haskell2010
 
 executable lidointerview-exe
@@ -45,7 +49,9 @@ executable lidointerview-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
     , lidointerview
+    , recursion-schemes
   default-language: Haskell2010
 
 test-suite lidointerview-test
@@ -58,5 +64,7 @@ test-suite lidointerview-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
     , lidointerview
+    , recursion-schemes
   default-language: Haskell2010
