--- a/package.yaml
+++ b/package.yaml
@@ -22,7 +22,7 @@ description:         Please see the README on GitHub at <https://github.com/s-ze
 dependencies:
 - base >= 4.7 && < 5
 - containers
-- recursion-schemes
+- relude
 
 library:
   source-dirs: src
