--- a/haxcel.cabal
+++ b/haxcel.cabal
@@ -4,11 +4,11 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 
-name:           lidointerview
+name:           haxcel
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/s-zeng/lidointerview#readme>
-homepage:       https://github.com/s-zeng/lidointerview#readme
-bug-reports:    https://github.com/s-zeng/lidointerview/issues
+description:    Please see the README on GitHub at <https://github.com/s-zeng/haxcel#readme>
+homepage:       https://github.com/s-zeng/haxcel#readme
+bug-reports:    https://github.com/s-zeng/haxcel/issues
 author:         Simon Zeng
 maintainer:     contact@simonzeng.com
 copyright:      2022 Simon Zeng
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/s-zeng/lidointerview
+  location: https://github.com/s-zeng/haxcel
 
 library
   exposed-modules:
@@ -31,7 +31,7 @@ library
       Parser
       ParseValue
   other-modules:
-      Paths_lidointerview
+      Paths_haxcel
   hs-source-dirs:
       src
   build-depends:
@@ -40,31 +40,31 @@ library
     , relude
   default-language: Haskell2010
 
-executable lidointerview-exe
+executable haxcel-exe
   main-is: Main.hs
   other-modules:
-      Paths_lidointerview
+      Paths_haxcel
   hs-source-dirs:
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , containers
-    , lidointerview
+    , haxcel
     , relude
   default-language: Haskell2010
 
-test-suite lidointerview-test
+test-suite haxcel-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Paths_lidointerview
+      Paths_haxcel
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , containers
-    , lidointerview
+    , haxcel
     , relude
   default-language: Haskell2010
