--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
-name:                lidointerview
+name:                haxcel
 version:             0.1.0.0
-github:              "s-zeng/lidointerview"
+github:              "s-zeng/haxcel"
 license:             BSD3
 author:              "Simon Zeng"
 maintainer:          "contact@simonzeng.com"
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/s-zeng/lidointerview#readme>
+description:         Please see the README on GitHub at <https://github.com/s-zeng/haxcel#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -28,7 +28,7 @@ library:
   source-dirs: src
 
 executables:
-  lidointerview-exe:
+  haxcel-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -36,10 +36,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - lidointerview
+    - haxcel
 
 tests:
-  lidointerview-test:
+  haxcel-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -47,4 +47,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - lidointerview
+    - haxcel
