--- a/haxcel.cabal
+++ b/haxcel.cabal
@@ -77,6 +77,7 @@ library
     , containers
     , polysemy
     , polysemy-plugin
+    , recursion-schemes
     , relude
   default-language: Haskell2010
 
@@ -132,6 +133,7 @@ executable haxcel-exe
     , haxcel
     , polysemy
     , polysemy-plugin
+    , recursion-schemes
     , relude
   default-language: Haskell2010
 
@@ -188,5 +190,6 @@ test-suite haxcel-test
     , haxcel
     , polysemy
     , polysemy-plugin
+    , recursion-schemes
     , relude
   default-language: Haskell2010
